# LiveRec

./: .gitignore  .gitmodules  Dockerfile  README.md  architecture_after.mmd  architecture_alt.mmd  architecture_before.mmd  cloc.py  compose.yaml  mycode.txt  non_polyg_live_loop.mmd  plot_bench.py  plot_stress.py  polyglot_eval.mmd  polyglot_numbers.csv  sequence_after.mmd  sequence_before.mmd  single_numbers.csv  start.sh  stress.csv
LiveFromDAP/: README.md  get_debug_servers.sh  install.sh  pyproject.toml  requirements.txt
LiveFromDAP/performance/: Makefile  compile_code_performance.csv  execute_performance.csv  execute_performance.py  general_performance.csv  general_performance.py  java_perf.csv  jdi_perf.csv  jdi_times.csv  load_code_performance.csv  load_code_performance.py  perf.ipynb  performance.ipynb  test_CLiveAgent.py  test_JavaLiveAgentperf.py  times.csv
LiveFromDAP/performance/scenario/: Scenario.py  __init__.py  binary_search_c_times.json  binary_search_java_times.json  binary_search_java_times_old.json  binary_search_javascript_times.json  binary_search_python_times.json  evaluate_c.py  evaluate_java.py  evaluate_javascript.py  evaluate_python.py
LiveFromDAP/src/: main.py
LiveFromDAP/src/livefromdap/: Makefile  __init__.py
LiveFromDAP/src/prettyprinter/: CPrettyPrinter.py  GoPrettyPrinter.py  JavaPrettyPrinter.py  JavascriptPrettyPrinter.py  (+2 more)
LiveFromDAP/tests/: test_AdvancedPythonLiveAgent.py  test_CLiveAgent.py  test_CPrettyPrinter.py  test_JavaLiveAgent.py  test_JavascriptLiveAgent.py  test_PythonLiveAgent.py  test_code_reload.py
(+306 files in other folders)
