[project]
name = "LiveFromDAP"
description = "Live backend builded on DAP"
readme = "README.md"
version = "0.1.0"
authors = [
    { name = "Jean-Baptiste Döderlein", email = "jean-baptiste.doderlein@ens-rennes.fr" },
]
dependencies = [
    "debugpy",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests"
]